--- a/GreetByName/index.html
+++ b/GreetByName/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script src="scripts/index.js"></script>
-    <p>Name <input type="text" id="nameField" /></p>
+    <p>Nombre <input type="text" id="nameField" /></p>
     <p> <input id="greetBtn" type="button"
          value="Greet the User" /></p>
 
